--- a/packages/backend/.env.local
+++ b/packages/backend/.env.local
@@ -1,4 +1,4 @@
-PORT=5000
+PORT=6000
 
 DB_NAME=nulp_database
 DB_USERNAME=unicorn_user
@@ -20,6 +20,8 @@ LIFETIMEPAYMENTSTOKEN=30d
 MORGANBODY=true
 MORGAN_NAME=format
 MORGAN_FORMAT=[:date[web]] [:remote-addr]":method :url" :status :res[content-length] - :response-time ms
+
+APP_BASE_URL=http://localhost:3000
 
 
 
