--- a/packages/backend/.env.local
+++ b/packages/backend/.env.local
@@ -1,4 +1,4 @@
-PORT=6000
+PORT=4000
 
 DB_NAME=nulp_database
 DB_USERNAME=unicorn_user
@@ -22,6 +22,10 @@ MORGAN_NAME=format
 MORGAN_FORMAT=[:date[web]] [:remote-addr]":method :url" :status :res[content-length] - :response-time ms
 
 APP_BASE_URL=http://localhost:3000
+
+CLOUDINARY_NAME=ukrtrader
+CLOUDINARY_API_KEY=993757643469297
+CLOUDINARY_API_SECRET=sFEtBbMEloYPEUj9r6c6arrqfBU
 
 
 
