--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "start:local": "react-scripts start",
+    "start": "env-cmd -f .env.local react-scripts start",
+    "start:local": "env-cmd -f .env.local react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -29,6 +29,9 @@
     "socket.io-client": "^4.4.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
   },
   "eslintConfig": {
     "extends": [
