--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -39,6 +39,7 @@
     "pg": "^8.6.0",
     "sequelize": "^6.21.6",
     "sequelize-cli": "^6.4.1",
+    "socket.io": "^4.5.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
