--- a/packages/backend/.env.local
+++ b/packages/backend/.env.local
@@ -1,3 +1,4 @@
+ENV=local
 PORT=4000
 
 DB_NAME=nulp_database
@@ -16,6 +17,11 @@ LIFETIMEACCESSTOKEN=7d
 LIFETIMEREFRESHTOKEN=30d
 LIFETIMERESTOREPASSWORDTOKEN=10m
 LIFETIMEPAYMENTSTOKEN=30d
+
+
+USER_TYPE=USER
+ADMIN_TYPE=ADMIN
+TEACHER_TYPE=TEACHER
 
 MORGANBODY=true
 MORGAN_NAME=format
